<resources>
    <string name="app_name">Gabriel_Izzo_C196_Scheduler</string>
    <string name="term_scheduler">Term Scheduler+</string>
    <string name="assessments">Assessments</string>
    <string name="enter_term">Enter Title</string>
    <string name="term_start">Start Date:</string>
    <string name="save_button">Save</string>
    <string name="term_title">Title:</string>
    <string name="edit_start">MM/DD/YYYY</string>
    <string name="enter_text">Terms</string>
    <string name="term_name">TextView</string>
    <string name="term_end">End Date:</string>
    <string name="edit_end">MM/DD/YYYY</string>
    <string name="shareTxt">Share</string>
    <string name="termsTxt">Terms</string>
    <string name="assessmentsTxt">Assessments</string>
    <string name="all_courses">All Courses</string>
    <string name="added_courses">Added Courses</string>
    <string name="delete_term">Delete Term</string>
    <string name="courses">Courses</string>
    <string name="add">ADD COURSE</string>
    <string name="tl_course_menu">Courses</string>
    <string name="tl_assessment_menu">Assessments</string>
    <string name="course_date">Course date</string>
    <string name="assessment_list_item_textview">Assessment List Item TextView</string>
    <string name="cd_assessment_menu">Assessments</string>
    <string name="cd_terms_menu">Terms</string>
    <string name="cl_assessments_menu">Assessments</string>
    <string name="cl_terms_menu">Terms</string>
    <string name="td_courses_menu">Courses</string>
    <string name="td_assessments_menu">Assessments</string>
    <string name="cd_share_menu">Share</string>
    <string name="al_courses_menu">Courses</string>
    <string name="al_terms_menu">Terms</string>
    <string name="all_terms_title">All Terms</string>
    <string name="drop_button_txt">DROP</string>
    <string name="all_courses_title">All Courses</string>
    <string name="course_start_date">Start Date:</string>
    <string name="term_date_text">date</string>
    <string name="save_btn">SAVE</string>
    <string name="course_assessments_lbl">Assessments</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="course_notes_lbl">Course Notes</string>
    <string name="instructor_email_hint">instructor@wgu.edu</string>
    <string name="phone_hint">+12345678910</string>
    <string name="phone_lbl">Phone:</string>
    <string name="instructor_name_hint">Enter Instructor Name</string>
    <string name="email_lbl">Email:</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="mm_dd_yyyy1">MM/DD/YYYY</string>
    <string name="title_hint">Enter Title</string>
    <string name="course_title_lbl">Title:</string>
    <string name="end_date_lbl">End Date:</string>
    <string name="status_lbl">Status:</string>
    <string name="status_hint">Select Course Status</string>
    <string name="instructor_name_lbl">Instructor:</string>
    <string name="update_term_lbl">Update</string>
    <string name="tl_edit_menu">Edit</string>
    <string name="add_course_button">Add Course Button</string>
    <string name="course_name">Course Name</string>
    <string name="all_assessments_title">All Assessments</string>
    <string name="add_assessment_button">Add Assessment Button</string>
    <string name="ad_start_date_lbl">Start Date:</string>
    <string name="ad_end_date_lbl">End Date:</string>
    <string name="type_lbl">Type:</string>
    <string name="assessment_type">Objective, Performance etc.</string>
    <string name="course_lbl">Course:</string>
    <string name="termID_lbl">Term ID:</string>
    <string name="term_spinner_hint">Select term</string>
    <string name="choose_status">Choose status</string>
    <string name="term_hint_lbl">This term must be saved first before adding courses to it in the Course Details screen</string>
    <string name="set_alerts">Set Start and End Date Alerts</string>
    <string name="delete_course">Delete</string>
    <string name="assessmentsButtonLabel">Assessments</string>
    <string name="coursesButtonLabel">Courses</string>
    <string name="channel_name">channel</string>
    <string name="channel_description">channelDesc</string>
    <string name="auto_generated">Auto-Generated</string>
    <string name="courseID_lbl">Course ID:</string>
    <string name="auto_gen_txt">Auto-Generated</string>
    <string-array name="type_array">
        <item>Objective Assessment</item>
        <item>Performance Assessment</item>
    </string-array>
    <string-array name="status_array">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Planned to Take</item>
        <item>Dropped</item>
    </string-array>
</resources>