<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/triton_gray"
    tools:context=".UI.CourseDetails">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="378dp"
        android:layout_height="596dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@color/triton_light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/termIDLabel"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/courseID_lbl"
                    android:textColor="@color/triton_dark_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/courseIDTxt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:enabled="false"
                    android:hint="@string/auto_generated"
                    android:importantForAutofill="no"
                    android:textColor="@color/triton_dark_blue"
                    android:textColorHint="#757575"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/termIDLbl"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/termID_lbl"
                    android:textColor="@color/triton_dark_blue"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/term_spinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseTitleLbl"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_title_lbl"
                    android:textColor="@color/triton_dark_blue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/courseTitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title_hint"
                    android:textColorHint="#757575"
                    android:inputType="text"
                    android:textColor="@color/triton_dark_blue"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseStartLbl"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_start_date"
                    android:textColor="@color/triton_dark_blue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/courseStartTxt"
                    android:layout_width="180dp"
                    android:layout_height="48dp"
                    android:enabled="false"
                    android:hint="@string/mm_dd_yyyy1"
                    android:inputType="date"
                    android:textSize="14sp" />
                <ImageView
                    android:id="@+id/startCalView"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_month" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseEndLbl"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date_lbl"
                    android:textColor="@color/triton_dark_blue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/courseEndTxt"
                    android:layout_width="180dp"
                    android:layout_height="48dp"
                    android:enabled="false"
                    android:hint="@string/mm_dd_yyyy"
                    android:inputType="date"
                    android:textSize="14sp" />
                <ImageView
                    android:id="@+id/endCalView"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_month" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseStatusLbl"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status_lbl"
                    android:textColor="@color/triton_dark_blue"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/course_status_spinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/instructorNameLbl"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/instructor_name_lbl"
                    android:textColor="@color/triton_dark_blue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/instructorNameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/instructor_name_hint"
                    android:inputType="text"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/instructorPhoneLbl"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_lbl"
                    android:textColor="@color/triton_dark_blue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/instructorPhoneTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/instructorEmailLbl"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email_lbl"
                    android:textColor="@color/triton_dark_blue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/instructorEmailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/instructor_email_hint"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />

            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/assessmentsLbl"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/triton_orange"
                android:text="@string/course_assessments_lbl"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/courseAssessmentsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/triton_light_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseNotesLbl"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/triton_blue"
                    android:text="@string/course_notes_lbl"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <EditText
                android:id="@+id/courseNotesTxt"
                android:layout_width="match_parent"
                android:layout_height="573dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/enter_notes"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveCourseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="295dp"
        android:layout_marginBottom="5dp"
        android:onClick="saveCourse"
        android:text="@string/save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>