<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CourseList">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="393dp"
        android:layout_height="189dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="9dp"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="saveTerm"
        android:text="@string/save_button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/assessmentsBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <Button
        android:id="@+id/assessmentsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="goToAssessments"
        android:text="@string/assessments"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="394dp"
        android:layout_height="177dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/termNameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/term_text" />

                <EditText
                    android:id="@+id/editTermTitle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/enter_term"
                    android:inputType="text"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/termStartTxt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/termStartText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/term_start" />

                <EditText
                    android:id="@+id/editTermStart"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/edit_start"
                    android:textColorHint="#757575" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/termEndTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/term_end" />

                <EditText
                    android:id="@+id/editTermEnd"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/edit_end"
                    android:inputType="text"
                    android:textColorHint="#757575" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>