<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/triton_gray"
    tools:context=".UI.TermDetails">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="saveTerm"
        android:text="@string/save_button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addCourseButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <Button
        android:id="@+id/addCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/drop_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <Button
        android:id="@+id/drop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/drop_button_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addCourseButton"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="378dp"
        android:layout_height="550dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@color/triton_light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/termNameLabel"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/term_title"
                    android:textColor="@color/triton_dark_blue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/termTitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/enter_term"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/triton_dark_blue"
                    android:textColorHint="#757575"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/termStartLabel"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/term_start"
                    android:textColor="@color/triton_dark_blue"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/termStartTxt"
                    android:layout_width="180dp"
                    android:layout_height="48dp"
                    android:hint="@string/edit_start"
                    android:enabled="false"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:textColor="@color/triton_dark_blue"
                    android:textColorHint="#757575"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/startCalView"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_month" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/termEndLabel"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/term_end"
                    android:textColor="@color/triton_dark_blue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/termEndTxt"
                    android:layout_width="180dp"
                    android:enabled="false"
                    android:layout_height="48dp"
                    android:hint="@string/edit_end"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:textColor="@color/triton_dark_blue"
                    android:textColorHint="#757575"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/endCalView"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_month" />

            </LinearLayout>

            <TextView
                android:id="@+id/addedCoursesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/added_courses"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:background="@color/triton_blue"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/addedCourses"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:background="@color/triton_light_gray">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/allCoursesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/all_courses"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:background="@color/triton_orange"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/allCourses"
                android:layout_width="match_parent"
                android:layout_height="274dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:background="@color/triton_light_gray">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>